add packages and splitwise redesign

--- a/packages.html
+++ b/packages.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Jannon Jeffries &mdash; Portfolio</title>
+  <title>Jannon Jeffries &mdash; Vivid Seats Football Packages</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/aos.min.css">
   <link rel="stylesheet" href="css/hamburgers/hamburgers.min.css">
@@ -40,11 +40,9 @@
   <meta name="msapplication-TileImage" content="images/fav/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
   <!-- Favicon End-->
-
 </head>
 
-<body class="home-page">
-
+<body>
   <div class="js-animsition animsition" data-animsition-in-class="fade-in" data-animsition-out-class="fade-out">
 
     <header id="navbar" class="templateux-navbar" data-aos="fade-down">
@@ -52,7 +50,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-sm-3 col-3">
-            <div class="site-logo"><a id="logo" href="#navbar"><img width="72" src="images/logo_white.svg"></a></div>
+            <div class="site-logo"><a id="logo" href="index.html"><img width="72" src="images/logo_white.svg"></a></div>
           </div>
           <div class="col-sm-9 col-9 text-right hamburger-container">
 
@@ -64,8 +62,8 @@
 
             <nav class="templateux-menu js-templateux-menu" role="navigation">
               <ul>
-                <li><a id="portfolioNav" href="#portfolioSection">Portfolio</a></li>
-                <li><a id="contactNav" href="#contactSection">Contact</a></li>
+                <li><a id="portfolioNav" href="index.html#portfolioSection">Portfolio</a></li>
+                <li><a id="contactNav" href="index.html#contactSection">Contact</a></li>
                 <li><a id="resumeNav" target="_blank" href="https://docs.google.com/document/d/15PjJdcsv_VlETdsOXHVBKPmZ6eb9s4rx74S8aS64bFc/edit?usp=sharing">R&eacute;sum&eacute;</a></li>
               </ul>
             </nav>
@@ -74,264 +72,63 @@
       </div>
     </header>
 
-    <!-- Splash -->
-    <section id="top" class="hero">
-      <div class="container">
-        <div class="row align-items-center justify-content-center intro">
-          <div class="col-md-10" data-aos="fade-up">
-            <h1>Hello, my name is Jannon & I try to make the world a prettier place one design at a time.</h1>
+   <!-- Project -->
+   <section class="templateux-hero"  data-scrollax-parent="true">
+        <div class="container">
+          <div class="row align-items-center justify-content-center project-intro">
+            <div class="col-lg-10" data-aos="fade-up">
+              <h1>Fan Experience Packages</h1>
+              <span>Football Partner Package Redesign</span>   
+            </div>
           </div>
         </div>
-      </div>
-    </section>
-    <!-- End Splash-->
-
-    <!-- Portfolio -->
-    <section id="portfolioSection" class="templateux-portfolio-overlap home-portfolio" id="next">
-      <div class="container-fluid">
-
-        <div class="row">
-          <!-- Packages Start -->
-          <div class="col-lg-6" data-aos="fade-up">
-            <a class="project animsition-link" href="packages.html">
-              <figure>
-                <img src="images/projects/packages/packages-thumb.jpg" alt="Football Fan Experience Packages" class="img-fluid">
-              </figure>
-              <div class="project-hover">
-                <div class="project-hover-inner">
-                  <h2>Fan Experience Packages</h2>
-                  <span>View Project</span>
+      </section>
+      <!-- END templateux-hero -->
+      <div class="spacer"></div>
+      <div class="spacer"></div>
+      <section class="templateux-portfolio-overlap">
+        <div class="container" data-aos="fade-up">
+              <div class="row justify-content-center">
+                <div class="col-lg-10">
+                  <p class="special"><strong>Problem: How do we make our partner pages more engaging for users without altering the backend code?</strong><br/>
+                    With few resources, a UX colleague and I redesigned and implemented a new experience for users shopping for professional football packages.
+                  </p>
                 </div>
               </div>
-            </a>
-          </div>
-          <!-- Packages End -->
-          <!-- Splitwise Start -->
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <a class="project animsition-link" href="split.html">
-              <figure>
-                <img src="images/projects/splitwise/split-thumb.jpg" alt="Splitwise App POC Redesign" class="img-fluid">
-              </figure>
-              <div class="project-hover">
-                <div class="project-hover-inner">
-                  <h2>Splitwise App Mock Redesign</h2>
-                  <span>View Project</span>
+              <div class="spacer"></div>
+              <p class="text-center"><img src="images/projects/packages/packages-1.jpg" alt="Redesigned fan package page" class="img-fluid"></p>
+              <div class="spacer"></div>
+              <div class="row justify-content-center">
+                <div class="col-lg-10">
+                  <p>At any growing company, bandwith is precious and typically dedicated to features and products that bring in the greatest revenue. However, this reality causes certain products to be left out of major redesign efforts. This occurred with the Vivid Seats football packages. Though these unique products allowed fans to take their gameday experience to the next level, there was never a great internal focus on them from a UX standpoint. Therefore, they remained outdated and unresponsive for far too long.</p>
+                  <p>After years of arduous manual updating and web release dependencies, my team decided that something needed to change. Though we knew we would not receive support from backend teams, a coworker and I took to brainstorming ways we could improve the package experience for users with minimal code changes.</p>
+                  <p>Below is a before and after comparison of one of our team package pages. From a UI standpoint, one of our focuses was to cut back on the amount of copy presented to the users. In this digital age, users do not take the time to read paragraphs upon paragraphs of copy. Therefore, we decided to keep it simple by limiting the content and allocating it to individual pages accordingly.</p>
+                  <p class="text-center ">
+                      <div class="spacer"></div>
+                      <div class="cocoen">
+                          <img src="images/projects/packages/packages-2.0.jpg" alt="Old Package Template">
+                          <img src="images/projects/packages/packages-2.1.jpg" alt="New Package Template">
+                      </div>
+                      <div class="spacer"></div>
+                  </p>
                 </div>
               </div>
-            </a>
-          </div>
-          <!-- Splitwise End -->
+              <div class="row align-items-center justify-content-center">
+                <div class="col-lg-10">
+                    <p>One of the major drawbacks to the previous design was the lack of a mobile experience. Since a major source of site traffic comes from mobile devices, web pages that are not responsive create unusable experiences for mobile users and because of this can cost a company in potential revenue.</p>
+                    <div class="spacer"></div>
+                    <p class="text-center "><img src="images/projects/packages/packages-3.png" alt="Mobile view for packages" class="img-fluid"></p>
+                    <div class="spacer"></div>
+                    <p>These football packages may look better, but the best part of this redesign is that they are already functioning better internally. Before, our team would have to go into the code everytime a package was sold out or a game had passed. A simple change turned into an ordeal with regression tests, pull request reviews and web releases. However, we were able to rework the code and implement it in a way so the package support team is able to make small changes to the packages by simply going into our CMS. So not only did this simple redesign create a better experience for our users, but it also created a better experience for us.</p>
+                  </div>
+              </div>
+              <div class="spacer"></div>
+              <p class="text-center"><a target="_blank" href="https://www.vividseats.com/nfl/chicago-bears-ultimate-fan-packages.html" class="button button--primary">View the Page</a></p>
         </div>
-        <div class="row">
-            <!-- Experience Start -->
-            <div class="col-lg-6" data-aos="fade-up">
-              <a class="project animsition-link" href="experience.html">
-                <figure>
-                  <img src="images/projects/experience/experience_thumb.jpg" alt="Vivid Seats Experience Page" class="img-fluid">
-                </figure>
-                <div class="project-hover">
-                  <div class="project-hover-inner">
-                    <h2>Experience Page</h2>
-                    <span>View Project</span>
-                  </div>
-                </div>
-              </a>
-            </div>
-            <!-- Experience End -->
-            <!-- Innovation Start -->
-            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-              <a class="project animsition-link" href="innovation.html">
-                <figure>
-                  <img src="images/projects/innovation/innovation_thumb.jpg" alt="Innovation Day Project" class="img-fluid">
-                </figure>
-                <div class="project-hover">
-                  <div class="project-hover-inner">
-                    <h2>Innovation Day Project</h2>
-                    <span>View Project</span>
-                  </div>
-                </div>
-              </a>
-            </div>
-            <!-- Innovation End -->
-          </div>
-        <div class="row">
-          <!-- March Start -->
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-              <a class="project animsition-link" href="march.html">
-                <figure>
-                  <img src="images/projects/march/mm_thumb.png" alt="March Madness Page Redesign" class="img-fluid">
-                </figure>
-                <div class="project-hover">
-                  <div class="project-hover-inner">
-                    <h2>March Madness Page Redesign</h2>
-                    <span>View Project</span>
-                  </div>
-                </div>
-              </a>
-            </div>
-            <!-- March End -->
-          <!-- Capital Start  -->
-          <div class="col-lg-6" data-aos="fade-up">
-            <a class="project animsition-link" href="capital.html">
-              <figure>
-                <img src="images/projects/capital/savor_thumb.jpg" alt="Capital One Savor Card Landing Page" class="img-fluid">
-              </figure>
-              <div class="project-hover">
-                <div class="project-hover-inner">
-                  <h2>Capital One Partner Page</h2>
-                  <span>View Project</span>
-                </div>
-              </div>
-            </a>
-          </div>
-          <!-- Capital End -->
-        </div>
-        <div class="row">
-          <!-- Cupcake Start -->
-          <div class="col-lg-6" data-aos="fade-up">
-              <a class="project animsition-link" href="cupcake.html">
-                <figure>
-                  <img src="images/projects/cupcake/cupcake_thumb.gif" alt="Cupcake Creator Project" class="img-fluid">
-                </figure>
-                <div class="project-hover">
-                  <div class="project-hover-inner">
-                    <h2>Cupcake Creator</h2>
-                    <span>View Project</span>
-                  </div>
-                </div>
-              </a>
-            </div>
-            <!-- Cupcake End -->
-          <!-- Mapbox Start -->
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-              <a class="project animsition-link" href="mapbox.html">
-                <figure>
-                  <img src="images/projects/mapbox/mapbox_thumb.jpg" alt="Mapbox MLB Map" class="img-fluid">
-                </figure>
-                <div class="project-hover">
-                  <div class="project-hover-inner">
-                    <h2>MLB Mapbox Map</h2>
-                    <span>View Project</span>
-                  </div>
-                </div>
-              </a>
-            </div>
-            <!-- Mapbox End -->
-          </div>
-          <div class="row">
-            <!-- Trans Start -->
-            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-              <a class="project animsition-link" href="trans.html">
-                <figure>
-                  <img src="images/projects/trans/trans_thumb.jpg" alt="Transactional Email Redesign" class="img-fluid">
-                </figure>
-                <div class="project-hover">
-                  <div class="project-hover-inner">
-                    <h2>Transactional Email Redesign</h2>
-                    <span>View Project</span>
-                  </div>
-                </div>
-              </a>
-            </div>
-            <!-- Trans End -->
-            <!-- Super Start -->
-            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-                <a class="project animsition-link" href="super.html">
-                  <figure>
-                    <img src="images/projects/super/sb_thumb.png" alt="Super Bowl Ticket Prices Landing Page" class="img-fluid">
-                  </figure>
-                  <div class="project-hover">
-                    <div class="project-hover-inner">
-                      <h2>Super Bowl Landing Page</h2>
-                      <span>View Project</span>
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <!-- Super End -->
-          </div>
-          <div class="row">
-            <!-- Gift Start -->
-          <div class="col-lg-6" data-aos="fade-up">
-              <a class="project animsition-link" href="gift.html">
-                <figure>
-                  <img src="images/projects/gift/gift-card_thumb.jpg" alt="Gift Card Page Redesign" class="img-fluid">
-                </figure>
-                <div class="project-hover">
-                  <div class="project-hover-inner">
-                    <h2>Gift Card Page Redesign</h2>
-                    <span>View Project</span>
-                  </div>
-                </div>
-              </a>
-            </div>
-            <!-- Gift End -->
-            <!-- Timeline Start -->
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-              <a class="project animsition-link" href="timeline.html">
-                <figure>
-                  <img src="images/projects/timeline/timeline_thumb.jpg" alt="Vivid Seats Timeline Wall" class="img-fluid">
-                </figure>
-                <div class="project-hover">
-                  <div class="project-hover-inner">
-                    <h2>Timeline Wall</h2>
-                    <span>View Project</span>
-                  </div>
-                </div>
-              </a>
-            </div>
-            <!-- Timeline End -->
-            </div>  
-            <div class="row">
-               <!-- Festival Start -->
-            <div class="col-lg-6" data-aos="fade-up">
-                <a class="project animsition-link" href="festival.html">
-                  <figure>
-                    <img src="images/projects/festival/festivals-thumb.gif" alt="Festival Page Animation" class="img-fluid">
-                  </figure>
-                  <div class="project-hover">
-                    <div class="project-hover-inner">
-                      <h2>Festival Page Animations</h2>
-                      <span>View Project</span>
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <!-- Festival End -->
-<!-- Wedding Start -->
-<div class="col-lg-6" data-aos="fade-up">
-    <a class="project animsition-link" href="wedding.html">
-      <figure>
-        <img src="images/projects/wedding/wedding_thumb.jpg" alt="Wedding Invitations" class="img-fluid">
-      </figure>
-      <div class="project-hover">
-        <div class="project-hover-inner">
-          <h2>Wedding Invitations</h2>
-          <span>View Project</span>
-        </div>
-      </div>
-    </a>
-  </div>
-  <!-- Wedding End -->
 
-            </div>  
-      </div>
-    </section>
-    <!-- End Portfolio-->
-
-    <!-- Contact -->
-    <div id="contactSection" class="contact-section templateux-section templateux-cta mt-5" data-aos="fade-up">
-      <div class="container-fluid">
-        <div class="cta-inner">
-          <h2><span class="words-1">Email Me</span>
-            <span id="copyEmail" class="words-2 copy-email" onclick="copyToClipboard('#copyEmail')">jannonjeffries@gmail.com</span></h2>
-          <div id="copiedAlert" class="copied-alert">
-            <p>Copied to clipboard</p>
-          </div>
-        </div>  
-      </div>
-    </div>
-    <!-- End Contact -->
+      </section>
+  
+   <!-- End Project -->
 
     <footer class="templateux-footer">
       <div class="container-fluid">
@@ -381,9 +178,15 @@
 
   </div>
 
-
   <script src="js/scripts-all.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/cocoen.min.js"></script>
+  <script src="js/cocoen-jquery.min.js"></script>
+  <script>
+      $(function(){
+        $('.cocoen').cocoen();
+      });
+  </script>
 
 </body>
 
