remove cohen on mobile ONCE AGAIN

--- a/packages.html
+++ b/packages.html
@@ -104,13 +104,13 @@
                   <p>After years of arduous manual updating and web release dependencies, my team decided that something needed to change. Though we knew we would not receive support from backend teams, a coworker and I took to brainstorming ways we could improve the package experience for users with minimal code changes.</p>
                   <p>Below is a before and after comparison of one of our team package pages. From a UI standpoint, one of our focuses was to cut back on the amount of copy presented to the users. In this digital age, users do not take the time to read paragraphs upon paragraphs of copy. Therefore, we decided to keep it simple by limiting the content and allocating it to individual pages accordingly.</p>
                   <p class="text-center">
-                      <div class="cocoen">
+                      <div id="cohenHideMobile" class="cocoen">
                           <img src="images/projects/packages/packages-2.0.jpg" alt="Old Package Template">
+                          <div class="spacer"></div>
                           <div class="spacer"></div>
                           <img width="100%" src="images/projects/packages/packages-2.1.jpg" alt="New Package Template">
                       </div>
                   </p>
-                  <div class="spacer"></div>
                 </div>
               </div>
               <div class="row align-items-center justify-content-center">
