--- a/packages.html
+++ b/packages.html
@@ -105,7 +105,7 @@
                   <p>Below is a before and after comparison of one of our team package pages. From a UI standpoint, one of our focuses was to cut back on the amount of copy presented to the users. In this digital age, users do not take the time to read paragraphs upon paragraphs of copy. Therefore, we decided to keep it simple by limiting the content and allocating it to individual pages accordingly.</p>
                   <p class="text-center">
                       <div id="cocoenHideMobile" class="cocoen">
-                          <img src="images/projects/packages/packages-2.0.jpg" alt="Old Package Template">
+                          <img width="100%" src="images/projects/packages/packages-2.0.jpg" alt="Old Package Template">
                           <div class="spacer"></div>
                           <div class="spacer"></div>
                           <img width="100%" src="images/projects/packages/packages-2.1.jpg" alt="New Package Template">
